...

  final String name;
  const OfferType(this.name);
}

enum GraphType {
  week("Недельный", 7),
  month("Месячный", 30),
  halfYear("Полугодовой", 182),
  year("Годовой", 365);

  final String name;
  final int duration;
...
