...

    return Scaffold(
      backgroundColor: const Color(0xFFf7f7f7),
      appBar: const NannyAppBar(
        color: Color(0xFFf7f7f7),
        hasBackButton: false,
        title: "График поездок",
      ),
      body: Center(
          child: Column(
        children: [
          // ElevatedButton.icon(
          //   onPressed: () {},
...
