...

  @override
  Widget build(BuildContext context) {
    return Scaffold(
      backgroundColor: const Color(0xFFf7f7f7),
      appBar: const NannyAppBar(
          color: Color(0xFFf7f7f7), title: "Новый график поездок"),
      body: FutureLoader(
        future: vm.loadRequest,
        completeView: (context, data) => !data
            ? const ErrorView(
                errorText:
                    "Не удалось загрузить данные для создания графика!\nПовторитк попытку")
...
